--- a/Primax/assets/css/style.css
+++ b/Primax/assets/css/style.css
@@ -60,8 +60,8 @@ Default CSS
 :root {
   --headerFonts: 'Poppins', sans-serif;
   --bodyFonts: 'Roboto', sans-serif;
-  --orangeColor: #f85f0a;
-  --lightColor: #f88240;
+  --orangeColor: #0a58ca;
+  --lightColor: #6c757d;
   --greenColor: #0ebc40;
   --titleColor: #00042e;
   --bodyColor: #4e4e4e;
