--- a/Primax/assets/css/pages-css/home-one.css
+++ b/Primax/assets/css/pages-css/home-one.css
@@ -34,7 +34,7 @@ Top Header Area
 }
 
 .header-left ul li i {
-  color: var(--orangeColor);
+  color: #0dcaf0;
   font-size: 17px;
   text-align: center;
   position: absolute;
@@ -60,7 +60,7 @@ Top Header Area
 }
 
 .header-left-color ul li a {
-  color: var(--whiteColor);
+  color: black;
 }
 
 .header-left-color ul li:hover a {
@@ -299,7 +299,7 @@ Barra de
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(255, 123, 0);
+  background-color: #0a58ca;
 }
 
 /* Personalizando a barra de rolagem no Internet Explorer e Edge */
