--- a/Primax/assets/css/pages-css/footer.css
+++ b/Primax/assets/css/pages-css/footer.css
@@ -4,11 +4,11 @@
 
 .footer-area-bg-two {
   position: relative;
-  z-index: 1;
+  z-index:1;
 }
 
 .footer-area-bg-two::before {
-  content: '';
+  content: 1;
   position: absolute;
   z-index: -1;
   bottom: 0;
