--- a/Primax/assets/css/pages-css/navbar.css
+++ b/Primax/assets/css/pages-css/navbar.css
@@ -53,7 +53,6 @@
 
 .desktop-nav .navbar .navbar-nav .nav-item a i {
   font-size: 18px;
-  position: relative;
   top: 3px;
 }
 
@@ -1160,16 +1159,15 @@ Responsive Css
     display: none;
   }
   .mobile-responsive-nav .mobile-responsive-menu.mean-container .mean-nav ul li a.mean-expand {
-    width: 50%;
+    width: 94%;
     height: 28px;
     text-align: right;
-    padding: 50px !important;
     background: transparent !important;
     border-left: none !important;
     border-bottom: none !important;
   }
   .mobile-responsive-nav .mobile-responsive-menu.mean-container .mean-nav ul li a.active {
-    color: var(--orangeColor);
+    color: var(--black);
   }
   .mobile-responsive-nav .mobile-responsive-menu.mean-container .mean-nav ul li li a {
     font-size: 15px;
@@ -1253,6 +1251,25 @@ Responsive Css
 .desktop-nav .navbar-nav .nav-link.active.show-line::before {
   opacity: 1;
 }
+
+.nav-btn {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  /* Botão para Desktop */
+  .nav-btn.desktop {
+      display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* Botão para Mobile */
+  .nav-btn.mobile {
+      display: block;
+  }
+}
+
 
 
 /*# sourceMappingURL=navbar.css.map */
